# Boop.vim

./: .gitignore  .gitmodules  Cargo.toml  README.md  boop-prototype.vim  build.rs  completion.bash
.github/workflows/: rust.yml
doc/: boop.txt
plugin/: boop.vim
src/: cli.rs  daemon.rs  main.rs
submodules/: Boop-rs
