[package]
name = "boop"
version = "0.1.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
fs_extra = "1.3.0"
xdg = "2.5.0"
eyre = "0.6.5"
log = "0.4.14"
boop-gtk-fork = {path = "submodules/Boop-GTK-fork"}
clap = { version = "3", features = ["derive"] }

[build-dependencies]
clap = "3"
clap_complete = "3"
