[package]
name = "boop-vim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boop"
path = "src/main.rs"

[dependencies]
home = "0.5"
directories = "5.0"
fs_extra = "1.3"
boop = {path = "submodules/Boop-rs"}
clap = { version = "=4.2", features = ["derive"] }
eyre = "0.6.5"

[build-dependencies]
clap = "=4.2"
clap_complete = "=4.2"
fs_extra = "1.3"
